# protocols-demo

./: .gitignore  README.md  pyproject.toml
src/protocols_demo/: callables_with_protocols.py  defaults.py  implicit_vs_explicit.py  nested_protocols.py
