[tool.black]
line-length = 79
target-version = ["py311"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "ALL",
]
exclude = [
]


[tool.pytest.ini_options]
minversion = "7.2.0"
addopts = """
    -vv
    -s
"""
testpaths = "tests/"
markers = [
    "integration: runs integration tests",
]


[tool.isort]
atomic = true
line_length = 79
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
balanced_wrapping = true
include_trailing_comma = true
multi_line_output = 3
known_third_party = [
    "pytest",
]
known_first_party = [
]

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "conftest",
    "tests.*",
    "*.tests",
]

ignore_errors = true

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
]
test = [
    "pytest>=7.3.1",
    "pytest-mock>=3.10.0",
]

lint = [
    "pre-commit>=2.21.0",
    "black>=23.3.0",
    "isort>=5.11.5",
    "mypy>=1.2.0",
    "ruff>=0.0.263",
]

[tool.pdm.build]
includes = [
    "protocol_demo",
]


[project]
name = "protocol_demo"
version = "1.0.0"
description = ""
authors = [
    { name = "Paylocity Data Science Team", email = "pctydatascience@paylocity.com" },
]
dependencies = [
    "attrs>=23.2.0",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
